--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ flutter:
     - assets/image3.png
     - assets/image4.png
     - assets/icon/fast-forward-svgrepo-com.svg
+    - assets/loginwelcome.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
