--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ flutter:
     - assets/image4.png
     - assets/icon/fast-forward-svgrepo-com.svg
     - assets/loginwelcome.png
+    - assets/signupimage.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
