--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_svg: ^2.0.9
   google_nav_bar: ^5.0.6
   http: ^1.2.0
+  shared_preferences: ^2.2.2
 
 
 dev_dependencies:
@@ -72,6 +73,7 @@ flutter:
     - assets/icon/fast-forward-svgrepo-com.svg
     - assets/loginwelcome.png
     - assets/signupimage.png
+    - assets/user.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
