--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,10 +77,10 @@ flutter:
     - assets/courseview/image1.png
     - assets/courseview/image2.png
     - assets/courseview/image3.png
-    - assets/latestadd/image12.png
-    - assets/latestadd/image32.png
-    - assets/latestadd/image22.png
-    - assets/latestadd/image42.png
+    - assets/latestadd/image1.png
+    - assets/latestadd/image3.png
+    - assets/latestadd/image2.png
+    - assets/latestadd/image4.png
     - assets/rc/i1.png
     - assets/rc/i2.png
     - assets/rc/i3.png
