--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,7 +86,11 @@ flutter:
     - assets/rc/i3.png
     - assets/rc/i4.png
     - assets/rc/i5.png
-
+    - assets/rac/i1.png
+    - assets/rac/i2.png
+    - assets/rac/i3.png
+    - assets/rac/i4.png
+    - assets/rac/i5.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
