--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   connectivity_plus: ^5.0.2
   flutter_rating_bar: ^4.0.1
   responsive_grid_list: ^1.4.0
+  youtube_player_flutter: ^9.0.0
+
 
 
 
