--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   responsive_grid_list: ^1.4.0
   youtube_player_flutter: ^9.0.0
+  cached_network_image: ^3.3.1
 
 
 
