--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   responsive_grid_list: ^1.4.0
   youtube_player_flutter: ^9.0.0
   cached_network_image: ^3.3.1
+  readmore: ^3.0.0
 
 
 
