--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   youtube_player_flutter: ^9.0.0
   cached_network_image: ^3.3.1
   readmore: ^3.0.0
+  animated_switch: ^0.0.3
 
 
 
@@ -79,8 +80,8 @@ flutter:
     - assets/image3.png
     - assets/image4.png
     - assets/icon/fast-forward-svgrepo-com.svg
-    - assets/loginwelcome.png
-    - assets/signupimage.png
+    - assets/loginwelcome.jpeg
+    - assets/Signup.jpeg
     - assets/user.png
     - assets/congrats.jpeg
     - assets/badluck.jpeg
