--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   cached_network_image: ^3.3.1
   readmore: ^3.0.0
   animated_switch: ^0.0.3
+  flutter_pdfview: ^1.3.2
+  flutter_localization: ^0.2.0
 
 
 
@@ -116,3 +118,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flutter_intl:
+  enabled: true
