--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   animated_switch: ^0.0.3
   flutter_pdfview: ^1.3.2
   flutter_localization: ^0.2.0
+  flutter_screenutil: ^5.9.0
 
 
 
