--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   flutter_pdfview: ^1.3.2
   flutter_localization: ^0.2.0
   flutter_screenutil: ^5.9.3
+  expandable_page_view: ^1.0.17
 
 
 
